Minor fixes and checks added